# Altur-Takehome

./: .gitignore  README.md  docker-compose.yml  documentation.md  pyproject.toml
backend/: Dockerfile  database.py  main.py  models.py  schemas.py  services.py
backend/tests/: test_main.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/calls/[id]/: page.tsx
frontend/src/components/: AnalyticsDashboard.tsx  CallCard.tsx  UploadZone.tsx
frontend/src/lib/: api.ts
